--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "baseUrl": ".",
     "paths": {
       "@styles/*": ["src/styles/*"],
-      "@components/*": ["src/components/*"]
+      "@components/*": ["src/components/*"],
+      "@util/*": ["src/utilities/*"]
     },
     "allowJs": true,
     "skipLibCheck": true,
